reservation: fixed alignment of room selection elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1297,7 +1297,10 @@ footer {
             align-items: center;
     grid-area: "a" "b" "c"  "d";
     gap: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+  }
+  .selection_room_container .room_selection {
+    margin-right: 0;
   }
   .selection_room_container .room_selection .room-selection-label {
     text-align: left;
@@ -1341,52 +1344,26 @@ footer {
 
 @media screen and (min-width: 1000px) {
   .selection_room_container {
-    display: -ms-grid;
-    display: grid;
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    -webkit-box-pack: stretch;
-        -ms-flex-pack: stretch;
-            justify-content: stretch;
     grid-area: "a b" "c d";
-    gap: 20px;
-  }
-  .selection_room_container .room_selection .room-selection-label {
-    text-align: left;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .selection_room_container {
-    display: -ms-grid;
-    display: grid;
     -ms-grid-columns: 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr;
-    -webkit-box-pack: stretch;
-        -ms-flex-pack: stretch;
-            justify-content: stretch;
     grid-area: "a b c" "d d d";
     gap: 20px;
-  }
-  .selection_room_container .room_selection .room-selection-label {
-    text-align: left;
   }
 }
 
 @media screen and (min-width: 1500px) {
   .selection_room_container {
-    display: -ms-grid;
-    display: grid;
     -ms-grid-columns: 1fr 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr 1fr;
-    -webkit-box-pack: stretch;
-        -ms-flex-pack: stretch;
-            justify-content: stretch;
     grid-area: "a b c d";
-    gap: 20px;
-  }
-  .selection_room_container .room_selection .room-selection-label {
-    text-align: left;
   }
 }
 
