--- a/assets/scss/_desktop.scss
+++ b/assets/scss/_desktop.scss
@@ -111,9 +111,10 @@
         "c" 
         "d";
         gap: 20px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
 
         .room_selection {
+            margin-right: 0;
             .room-selection-label {
                 text-align: left;
             }
@@ -153,19 +154,10 @@
 // reservation: selection du nombre de chambre
 @media screen and (min-width: 1000px) {
     .selection_room_container {
-        display: grid;
         grid-template-columns: 1fr 1fr;
-        justify-content: stretch;
         grid-area: 
         "a b"
         "c d";
-        gap: 20px;
-
-        .room_selection {
-            .room-selection-label {
-                text-align: left;
-            }
-        }
     }
     
 }
@@ -173,19 +165,11 @@
 // reservation: selection du nombre de chambre
 @media screen and (min-width: 1200px) {
     .selection_room_container {
-        display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        justify-content: stretch;
         grid-area: 
         "a b c"
         "d d d";
         gap: 20px;
-
-        .room_selection {
-            .room-selection-label {
-                text-align: left;
-            }
-        }
     }
     
 }
@@ -193,18 +177,9 @@
 // reservation: selection du nombre de chambre
 @media screen and (min-width: 1500px) {
     .selection_room_container {
-        display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        justify-content: stretch;
         grid-area: 
         "a b c d";
-        gap: 20px;
-
-        .room_selection {
-            .room-selection-label {
-                text-align: left;
-            }
-        }
     }
     
 }
